--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "html-tag-check",
+  "author": "Koki Nagai",
   "version": "1.0.0",
-  "description": "",
+  "description": "HTML Tag Checker by TypeScript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.6",
     "typescript": "^5.0.2"
-  }
+  },
+  "lint-staged": {
+    "src/*.ts": [
+      "prettier --ignore-unknown --write"
+    ]
+  },
+  "prepare": "husky install"
 }
