chore: add index.d.ts

--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "html-tag-check",
   "author": "Koki Nagai",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "HTML Tag Checker by TypeScript",
-  "main": "index.js",
-  "scripts": {
-    "build": "pnpm run build:esm && pnpm run build:cjs",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:types": "tsc -p tsconfig.types.json"
-  },
+  "main": "dist/index.js",
+  "module": "./lib/mjs/index.js",
   "keywords": [],
   "license": "MIT",
   "exports": {
@@ -18,6 +13,15 @@
       "import": "./dist/esm/index.js",
       "types": "./dist/types/index.js"
     }
+  },
+  "bugs": {
+    "url": "https://github.com/NagaiKoki/html-tag-chck/issues"
+  },
+  "scripts": {
+    "build": "pnpm run build:esm && pnpm run build:cjs",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:types": "tsc -p tsconfig.types.json"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
@@ -33,5 +37,6 @@
       "prettier --ignore-unknown --write"
     ]
   },
+  "types": "./index.d.ts",
   "prepare": "husky install"
 }
