chore: add files

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
       "types": "./dist/types/index.js"
     }
   },
+  "files": [
+    "./dist",
+    "./index.d.ts"
+  ],
   "bugs": {
     "url": "https://github.com/NagaiKoki/html-tag-chck/issues"
   },
