--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "description": "HTML Tag Checker by TypeScript",
   "main": "dist/esm/index.js",
   "module": "./dist/esm/index.js",
-  "keywords": [],
+  "keywords": [
+    "TypeScript",
+    "HTML",
+    "tag",
+    "check",
+    "error",
+    "validation"
+  ],
   "license": "MIT",
   "exports": {
     ".": {
