fix: build types

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/NagaiKoki/html-tag-chck/issues"
   },
   "scripts": {
-    "build": "pnpm run build:esm && pnpm run build:cjs",
+    "build": "pnpm run build:esm && pnpm run build:cjs && pnpm run build:types",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:types": "tsc -p tsconfig.types.json",
