--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,5 +15,6 @@
     "downlevelIteration": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["./src/**/__tests__"]
 }
